Small bug fixes and made the general modal layout responsive

--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
       <div class="modal-dialog">
         <div id="modalContent" class="modal-content">
           <img id="closeModal" src="./assets/images/close_x.svg" class="modal-close" alt="Close">
-          <div class="popup">
+          <div class="popup-modal">
             <div class="popup-content">
               <!-- login modal content, maybe we can only change the content for others -->
               <h3 class="decoration-title red-decoration-title">ВХОД</h3>
