Small visual bug fixes and started adding the ingredients to all customizable products

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <a
                       class="font-bold text-center"
                       style="width: 10px; height: 10px"
-                      href="#"
+                      href="tel:070012525"
                     >
                       <div class="tooltip">
                         <img
@@ -85,10 +85,10 @@
                     </a>
                   </li>
                   <li class="show-phone">
-                    <a class="font-bold text-center" href="#" id="telNumber"
+                    <a class="font-bold text-center" href="tel:070012525" id="telNumber"
                       >070012525</a
                     >
-                    <a class="font-bold text-center" href="#" id="telText"
+                    <a class="font-bold text-center" href="tel:070012525" id="telText"
                       >ОБАДЕТЕ НИ СЕ</a
                     >
                   </li>
@@ -455,7 +455,7 @@
       <div class='white'>
         <div class='footer-container'>
           <div class='padding-top-20 text-center'>
-            <ul class="list">
+            <ul class="list main-wrapper">
               <li>
                 <a href="#" class="menu-color open-modal">МЕНЮ</a>
               </li>
@@ -482,7 +482,7 @@
           <div class="text-center">
             <div class="social-container">
               <div class="tooltip tel">
-              <a href="#" class="telFooter">
+              <a href="tel:070012525" class="telFooter">
                <img src="assets/images/logos/070012525.svg" alt='070012525' id='tel070012525'>
                <img src="assets/images/tel.svg" alt='telefon' id='telImage'>
                <span class="tooltiptext">0700-1-2525</span>
@@ -698,7 +698,7 @@
                 {{#if this.description}}
                   {{this.description}}
                 {{else}}
-                  {{this.ingredients}}
+                  {{this.stringifiedIngredients}}
                 {{/if}}
               </p>
               <div class="btn-wrapper">
