More ingredients added

--- a/index.html
+++ b/index.html
@@ -755,9 +755,10 @@
             <p class="pull-left font-bold">Продукти</p>
             <!-- array from ingredients -->
             <div class="ingredients">
-              {{#each this.ingredients}}
+              <!-- {{#each this.ingredients}}
               <span class="product-ingredient">{{this}} </span>
-              {{/each}}
+              {{/each}} -->
+              {{this.stringifiedIngredients}}
             </div>
           </div>
         </div>
