Fixed a bug with a menu

--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
           <div id="filter-bar">
             <div class="menu-container">
               <ul id="main-filter" class="main-menu">
-                <li>
+                <li id="combo">
                   <a href="#allDeals">
                     <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="512px" height="512px" viewBox="0 0 533.333 533.333" style="enable-background:new 0 0 533.333 533.333;" xml:space="preserve" class="filter-bar-icons hidden-md hidden-lg svg replaced-svg">
                       <g>
@@ -358,7 +358,7 @@
                       <g>
                       </g>
                       </svg>
-                      <span  id="combo">DEALS</span>
+                      <span >DEALS</span>
                   </a>
                 </li>
                 <li>
