Made the profile dropdown responsive

--- a/index.html
+++ b/index.html
@@ -134,7 +134,10 @@
                 <span id="orderNumber" class="order-num">0</span>
               </li>
               <li id="loggedIn">
-                <img src="./assets/images/account_avatar_icon.svg" alt="profile">
+                <div class="login-container">
+                  <img src="./assets/images/account_avatar_icon.svg" alt="profile">
+                  <span id="avatar-txt" class="visible-resposnsive">PROFILE</span>
+                </div>
                 <div id="profileDropdown" class="dropdown-container flex column hidden">
                   <div class="arrow-container">
                     <div class="arrow"></div>
@@ -630,20 +633,33 @@
                 <h2>{{this.title}}</h2>
               {{/ifCond}}
             </div>
-            <p class="product-description">
-              {{this.description}}
-            </p>
-            <img class="product-picture" src="./assets/images/{{this.image}}" alt="{{this.title}}" />
+            {{#ifCond this.category '!==' 'drink'}}
+              <p class="product-description">
+                {{this.description}}
+              </p>
+            {{/ifCond}}
+            <img class="product-picture {{this.category}}-img" src="./assets/images/{{this.image}}" alt="{{this.title}}" />
             <div class="btn-wrapper">
               <button class="green-button button rounded">ИЗБЕРЕТЕ</button>
             </div>
             <section class="slide-up closed">
-              <div class="weight-container">
-                <span class="border"></span>
-                <img src="./assets/images/weight.svg" alt="weight">
-                <span class="border"></span>
-                <span class="weight">{{this.weight}}g</span>
-              </div>
+              {{#ifCond this.category '!==' 'drink'}}
+                <div class="weight-container">
+                  <span class="border"></span>
+                  <img src="./assets/images/weight.svg" alt="weight">
+                  <span class="border"></span>
+                  <span class="weight">{{this.weight}}g</span>
+                </div>
+              {{/ifCond}}
+              {{#ifCond this.types.length '>' 0}}
+                <div class="select-wrapper">
+                  <select name="productTypes" id="productTypes">
+                    {{#each this.types}}
+                      <option value="type{{@index}}">{{this}}</option>
+                    {{/each}}
+                  </select>
+                </div>
+              {{/ifCond}}
               <div class="details">
                 <div class="card-quantity">
                   <p>КОЛИЧЕСТВО</p>
@@ -655,7 +671,11 @@
                 </div>
                 <div class="card-price">
                   <p>ЦЕНА</p>
-                  <p class="price-sum">{{this.price}}лв</p>
+                    {{#ifCond this.category '===' 'drink'}}
+                      <p class="price-sum">{{this.price.[0]}}лв</p>
+                    {{else}}
+                      <p class="price-sum">{{this.price}}лв</p>
+                    {{/ifCond}}
                 </div>
               </div>
               <button class="addBtn green-button button rounded">ДОБАВИ</button>
