--- a/index.html
+++ b/index.html
@@ -493,7 +493,9 @@
           <nav></nav>
           <div></div>
         </div>
-        <div id="allPizzasPage" class="card-container main-wrapper"></div>
+        <div id="allPizzasPage" class="card-container main-wrapper">
+          <!-- // tags; -->
+        </div>
         <div id="allStartersPage" class="card-container main-wrapper"></div>
         <div id="allChickenPage" class="card-container main-wrapper"></div>
         <div id="allPastaPage" class="card-container main-wrapper"></div>
