Fixed a small bug

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
               <li id="loggedIn">
                 <div class="login-container">
                   <img src="./assets/images/account_avatar_icon.svg" alt="profile">
-                  <span id="avatar-txt" class="visible-resposnsive">PROFILE</span>
+                  <span id="avatar-txt" class="visible-resposnsive text-bold">PROFILE</span>
                 </div>
                 <div id="profileDropdown" class="dropdown-container flex column hidden">
                   <div class="arrow-container">
