Added some functionality

--- a/index.html
+++ b/index.html
@@ -1045,11 +1045,11 @@
            <label>ЗА ВЕГЕТАРИАНЦИ</label>
          </div>
          <div class="filter">
-          <input type="checkbox" id="hot">
+          <input type="checkbox" id="hotP">
           <label>ПИКАНТНО</label>
         </div>
         <div class="filter">
-          <input type="checkbox" id="fasting">
+          <input type="checkbox" id="leanP">
           <label>ПОСТНИ</label>
         </div>
         <div class="filter">
@@ -1061,11 +1061,11 @@
     {{#ifCond this.category '===' "starter" }}
       <div class="filter-container">
         <div class="filter">
-        <input type="checkbox" id="vegeterian">
+        <input type="checkbox" id="vegeterianStarters">
         <label>ЗА ВЕГЕТАРИАНЦИ</label>
       </div>
      <div class="filter">
-       <input type="checkbox" id="new_p">
+       <input type="checkbox" id="newStarters">
        <label>НОВО</label>
      </div>
     </div>
@@ -1073,11 +1073,11 @@
     {{#ifCond this.category '===' "pasta" }}
      <div class="filter-container">
        <div class="filter">
-        <input type="checkbox" id="hot">
+        <input type="checkbox" id="spicyPasta">
         <label>ПИКАНТНО</label>
       </div>
       <div class="filter">
-        <input type="checkbox" id="new_p">
+        <input type="checkbox" id="newPasta">
         <label>НОВО</label>
       </div>
      </div>
@@ -1085,11 +1085,11 @@
    {{#ifCond this.category '===' "sauce" }}
      <div class="filter-container">
        <div class="filter">
-        <input type="checkbox" id="hot">
+        <input type="checkbox" id="spicySauces">
         <label>ПИКАНТНО</label>
        </div>
      <div class="filter">
-       <input type="checkbox" id="new_p">
+       <input type="checkbox" id="newSauces">
        <label>НОВО</label>
       </div>
     </div>
@@ -1097,11 +1097,11 @@
    {{#ifCond this.category '===' "dessert" }}
      <div class="filter-container">
        <div class="filter">
-        <input type="checkbox" id="dessert">
+        <input type="checkbox" id="desserts">
         <label>ДЕСЕРТИ</label>
        </div>
      <div class="filter">
-       <input type="checkbox" id="ice_cream">
+       <input type="checkbox" id="icecreams">
        <label>СЛАДОЛЕДИ</label>
       </div>
     </div>
