Finnished modals and started on cart page

--- a/index.html
+++ b/index.html
@@ -645,6 +645,7 @@
           alt="Page not found"
         />
       </div>
+      <div id="checkoutPage"></div>
     </main>
     <footer class='margin-top-25'>
       <div class='white'>
@@ -733,70 +734,7 @@
             <div id="modalCurvedBorder" class="popup-curved">
               <div class="popup-curved-img popup-curved-carry-out"></div>
             </div>
-            <div id="modalContentContainer" class="popup-content">
-              <!-- <div id="restaurantModal">
-                <h3 class="decoration-title red-decoration-title">ИЗБЕРЕТЕ МАГАЗИН &amp; ЧАС ЗA ВЗЕМАНЕ</h3>
-                <div class="row">
-                  <div class="form-group col-xs-12">
-                      <label for="step3-carry-out-store">РЕСТОРАНТ</label>
-                      <div class="select-wrapper">
-                        <select name="store_id" class="form-control light-grey-bg text-select">
-                          <option value="0" rel="0,0">Изберете ресторант </option>
-                          <option html="Варна - Левски ул. Димитър Икономов 36 Телефонен номер:070012525" value="100" rel="43.2205113, 27.9357814" data-perma="varna-levski">Варна - Левски</option>
-                          <option html="Варна - Планет Мол бул. Сливница  185 Телефонен номер:070012525" value="98" rel="43.227123, 27.875818" data-perma="varna-delta-planet-mall">Варна - Планет Мол</option>
-                          <option html="Пловдив - Кючук Париж ул. Македония 95  Телефонен номер:070012525" value="96" rel="42.1227261, 24.74001420000002" data-perma="plovdiv-kuchuk-paris">Пловдив - Кючук Париж</option>
-                          <option html="Пловдив - Тракия ул. Георги Данчов 16 Телефонен номер:070012525" value="92" rel="42.139043, 24.787956" data-perma="Plovdiv-trakia">Пловдив - Тракия</option>
-                          <option html="Пловдив - Център ул. Иван Андонов 5 Телефонен номер:070012525" value="86" rel="42.141563, 24.739781" data-perma="plovdiv-central">Пловдив - Център</option>
-                          <option html="София - Борово ул. Ген. Стефан Тошев  8 Телефонен номер:070012525" value="36" rel="42.673088, 23.285871" data-perma="sofia-borovo">София - Борово</option>
-                          <option html="София - Вапцаров бул. Никола Вапцаров 6 Телефонен номер:070012525" value="91" rel="42.665758, 23.319333" data-perma="sofia-vaptsarov">София - Вапцаров</option>
-                          <option html="София - Гео Милев ул.Александър  Жендов 6 Телефонен номер:070012525" value="44" rel="42.680476, 23.35668" data-perma="sofia-geo-milev">София - Гео Милев</option>
-                          <option html="София - Дружба ул. Проф.Цветан Лазаров 124 Телефонен номер:070012525" value="89" rel="42.652106, 23.404224" data-perma="sofia-drujba">София - Дружба</option>
-                          <option html="София - Костенски Водопад ул.Костенски Водопад 58 Телефонен номер:070012525" value="99" rel="42.665479, 23.298798" data-perma="sofia-kostenski-vodopad">София - Костенски Водопад</option>
-                          <option html="София - Красна Поляна ул.Пчиня 31 Телефонен номер:070012525" value="65" rel="42.695340, 23.285779" data-perma="sofia-krasna-polqna">София - Красна Поляна</option>
-                          <option html="София - Люлин ул.Панчо Владигеров 21 Телефонен номер:070012525" value="50" rel="42.713115, 23.248725" data-perma="sofia-lulin">София - Люлин</option>
-                          <option html="София - Младост бул. Александър Малинов 78 Телефонен номер:070012525" value="54" rel="42.636315, 23.369848" data-perma="sofia-mladost">София - Младост</option>
-                          <option html="София - Младост 1 бул. Александър Мaлинов 6  Телефонен номер:070012525" value="97" rel="42.655462, 23.381358" data-perma="Sofia-mladost-1">София - Младост 1</option>
-                          <option html="София - Мусагеница ул.Пловдивско Поле 1-5 Телефонен номер:070012525" value="90" rel="42.661752, 23.360198" data-perma="sofia-musagenica">София - Мусагеница</option>
-                          <option html="София - Надежда Бул. Ломско Шосе 174 Телефонен номер:070012525" value="94" rel="42.734501, 23.294268" data-perma="sofia-nadejda">София - Надежда</option>
-                          <option html="София - Павлово ул. Александър Пушкин 38 Телефонен номер:070012525" value="81" rel="42.661629, 23.264938" data-perma="sofia-pavlovo">София - Павлово</option>
-                          <option html="София - Студ. Град 2 проф. д-р Иван Странски 1   Телефонен номер:070012525" value="95" rel="42.643048, 23.344144" data-perma="sofia-student-City-2">София - Студ. Град 2</option>
-                          <option html="София - Студентски Град ул.Йордан Йосифов 4 Телефонен номер:070012525" value="48" rel="42.653846, 23.345557" data-perma="sofia-student-city">София - Студентски Град</option>
-                          <option html="София - Сухата Река Между блок 12-13   Телефонен номер:070012525" value="93" rel="42.703658, 23.356031" data-perma="Sofia-Suhata-Reka">София - Сухата Река</option>
-                          <option html="София - Център ул.Александър Стамболийски 41 Телефонен номер:070012525" value="63" rel="42.697224, 23.317076" data-perma="sofia-center">София - Център</option>
-                          <option html="София - Южен парк ул. Бяла черква 1 Телефонен номер:070012525" value="41" rel="42.674683, 23.308798" selected="selected" data-perma="sofia-south-park">София - Южен парк</option>
-                        </select>
-                        <div class="cselect">София - Южен парк</div>
-                      </div>
-                      <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
-                      <span class="error_message error-txt"></span>
-                  </div>
-                  <div class="form-group col-xs-12">
-                      <label for="step3-carry-out-time">ЧАС ЗА ДОСТАВКА</label>
-                      <div class="select-wrapper">
-                          <select name="when" id="step3-carry-out-time" class="form-control light-grey-bg text-select">
-                            <option value="21:10" store_id="41" rel="NOW" time="21:10">сега</option>
-                            <option value="21:20" store_id="41" rel="LATER" time="21:20">21:20</option>
-                            <option value="21:30" store_id="41" rel="LATER" time="21:30">21:30</option>
-                            <option value="21:40" store_id="41" rel="LATER" time="21:40">21:40</option>
-                            <option value="21:50" store_id="41" rel="LATER" time="21:50">21:50</option>
-                            <option value="22:00" store_id="41" rel="LATER" time="22:00">22:00</option>
-                            <option value="22:10" store_id="41" rel="LATER" time="22:10">22:10</option>
-                            <option value="22:20" store_id="41" rel="LATER" time="22:20">22:20</option>
-                            <option value="22:30" store_id="41" rel="LATER" time="22:30">22:30</option>
-                            <option value="22:40" store_id="41" rel="LATER" time="22:40">22:40</option>
-                            <option value="22:50" store_id="41" rel="LATER" time="22:50">22:50</option>
-                            <option value="23:00" store_id="41" rel="LATER" time="23:00">23:00</option>
-                            <option value="23:10" store_id="41" rel="LATER" time="23:10">23:10</option>
-                            <option value="23:20" store_id="41" rel="LATER" time="23:20">23:20</option>
-                          </select>
-                          <div class="cselect">сега</div>
-                      </div>
-                      <span class="error_message error-txt"></span>
-                  </div>
-                  <div class="button red-btn make_order">ПОРЪЧАЙ СЕГА!</div>
-                </div>
-              </div> -->
-            </div>
+            <div id="modalContentContainer" class="popup-content"></div>
           </div>
         </div>
       </div>
@@ -859,9 +797,10 @@
               {{#ifCond this.category '!==' 'drink'}}
                 <div class="weight-container">
                   <span class="border"></span>
-                  <img src="./assets/images/weight.svg" alt="weight">
+                  <div class="weight-center">
+                    <div class="weight">{{this.weight}}g</div>
+                  </div>
                   <span class="border"></span>
-                  <span class="weight">{{this.weight}}g</span>
                 </div>
               {{/ifCond}}
               {{#ifCond this.types.length '>' 0}}
@@ -1102,6 +1041,7 @@
     <script src="./assets/script/classes/UserService.js"></script>
     <script src="./assets/script/menuController.js"></script>
     <script src="./assets/script/modalController.js"></script>
+    <script src="./assets/script/checkoutController.js"></script>
     <script src="./assets/script/productsController.js"></script>
     <script src="./assets/script/userController.js"></script>
     <script src="./assets/script/index.js"></script>
