Checkout page stilization and helper methods

--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
           alt="Page not found"
         />
       </div>
-      <div id="checkoutPage"></div>
+      <div id="checkoutPage" class="main-wrapper rounded"></div>
     </main>
     <footer class='margin-top-25'>
       <div class='white'>
