Added cart functionality (changing quantities from the checkout page and removing products from cart)

--- a/index.html
+++ b/index.html
@@ -818,7 +818,7 @@
                   <div class="quantity-wrapper">
                     <img class="minus quantity-controller" alt="minus" src="assets/images/minus.svg">
                     <span class="quantity-number">1</span>
-                    <img class="plus quantity-controller" alt="minus" src="assets/images/plus.svg">
+                    <img class="plus quantity-controller" alt="plus" src="assets/images/plus.svg">
                   </div>
                 </div>
                 <div class="card-price">
